# Generated by Django 5.2.7 on 2025-10-24 16:45

import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Tenant',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('slug', models.SlugField(help_text='Уникальный человеко-читаемый идентификатор тенанта.', max_length=80, unique=True, verbose_name='Слаг')),
                ('name', models.CharField(help_text='Отображаемое название тенанта.', max_length=160, verbose_name='Название')),
                ('is_active', models.BooleanField(default=True, help_text='Признак, что тенант активен и доступен.', verbose_name='Активен')),
            ],
            options={
                'verbose_name': 'Тенант',
                'verbose_name_plural': 'Тенанты',
                'db_table': 'core_tenant',
            },
        ),
    ]
