# Generated by Django 5.2.7 on 2025-10-24 16:45

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
        ('locations', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='DeviceType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('key', models.SlugField(help_text='Уникальный ключ типа устройства в пределах тенанта (например, thermostat).', max_length=80, verbose_name='Ключ типа')),
                ('display_name', models.CharField(help_text='Человеко-читаемое название типа устройства.', max_length=120, verbose_name='Название типа')),
                ('capabilities', models.JSONField(blank=True, default=dict, help_text='Произвольный JSON с поддерживаемыми атрибутами и командами.', verbose_name='Возможности')),
                ('tenant', models.ForeignKey(help_text='Тенант, к которому принадлежит запись.', on_delete=django.db.models.deletion.CASCADE, to='core.tenant', verbose_name='Тенант')),
            ],
            options={
                'verbose_name': 'Тип устройства',
                'verbose_name_plural': 'Типы устройств',
                'db_table': 'devices_device_type',
                'unique_together': {('tenant', 'key')},
            },
        ),
        migrations.CreateModel(
            name='Device',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('name', models.CharField(help_text='Отображаемое имя устройства.', max_length=120, verbose_name='Название устройства')),
                ('slug', models.SlugField(help_text='Короткий уникальный идентификатор устройства в пределах тенанта.', max_length=80, verbose_name='Слаг устройства')),
                ('external_id', models.CharField(blank=True, db_index=True, help_text='Серийный номер или ID во внешней системе/облаке.', max_length=160, verbose_name='Внешний идентификатор')),
                ('properties', models.JSONField(blank=True, default=dict, help_text='Произвольные свойства (модель, производитель, лимиты и т.п.).', verbose_name='Свойства')),
                ('is_online', models.BooleanField(default=False, help_text='Признак текущей онлайн-доступности устройства.', verbose_name='Онлайн')),
                ('last_seen_at', models.DateTimeField(blank=True, help_text='Метка времени последней связи с устройством.', null=True, verbose_name='Последняя активность')),
                ('home', models.ForeignKey(help_text='Дом, в котором расположено устройство.', on_delete=django.db.models.deletion.CASCADE, related_name='devices', to='locations.home', verbose_name='Дом')),
                ('room', models.ForeignKey(blank=True, help_text='Комната/зона, где находится устройство (необязательно).', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='devices', to='locations.room', verbose_name='Комната')),
                ('tenant', models.ForeignKey(help_text='Тенант, к которому принадлежит запись.', on_delete=django.db.models.deletion.CASCADE, to='core.tenant', verbose_name='Тенант')),
                ('type', models.ForeignKey(help_text='Тип, определяющий возможности устройства.', on_delete=django.db.models.deletion.PROTECT, related_name='devices', to='devices.devicetype', verbose_name='Тип устройства')),
            ],
            options={
                'verbose_name': 'Устройство',
                'verbose_name_plural': 'Устройства',
                'db_table': 'devices_device',
                'unique_together': {('tenant', 'slug')},
            },
        ),
    ]
