# Generated by Django 5.2.7 on 2025-10-24 16:45

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Home',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('name', models.CharField(help_text='Отображаемое имя объекта (например, «Дом», «Квартира»).', max_length=120, verbose_name='Название дома')),
                ('slug', models.SlugField(help_text='Короткий уникальный идентификатор дома в пределах тенанта.', max_length=80, verbose_name='Слаг дома')),
                ('tenant', models.ForeignKey(help_text='Тенант, к которому принадлежит запись.', on_delete=django.db.models.deletion.CASCADE, to='core.tenant', verbose_name='Тенант')),
            ],
            options={
                'verbose_name': 'Дом',
                'verbose_name_plural': 'Дома',
                'db_table': 'locations_home',
                'unique_together': {('tenant', 'slug')},
            },
        ),
        migrations.CreateModel(
            name='Room',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('name', models.CharField(help_text='Отображаемое имя комнаты/зоны (например, «Гостиная»).', max_length=120, verbose_name='Название комнаты')),
                ('slug', models.SlugField(help_text='Короткий уникальный идентификатор комнаты в пределах дома.', max_length=80, verbose_name='Слаг комнаты')),
                ('home', models.ForeignKey(help_text='Дом, к которому относится комната.', on_delete=django.db.models.deletion.CASCADE, related_name='rooms', to='locations.home', verbose_name='Дом')),
                ('tenant', models.ForeignKey(help_text='Тенант, к которому принадлежит запись.', on_delete=django.db.models.deletion.CASCADE, to='core.tenant', verbose_name='Тенант')),
            ],
            options={
                'verbose_name': 'Комната',
                'verbose_name_plural': 'Комнаты',
                'db_table': 'locations_room',
                'unique_together': {('tenant', 'home', 'slug')},
            },
        ),
    ]
