# Generated by Django 5.2.7 on 2025-10-24 16:45

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
        ('devices', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='TelemetryRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('key', models.CharField(db_index=True, help_text='Имя метрики (например, temperature, humidity, power_w).', max_length=80, verbose_name='Ключ телеметрии')),
                ('value', models.JSONField(help_text="Произвольный JSON со значением (например, {'v': 22.5, 'unit': '°C'}).", verbose_name='Значение')),
                ('ts', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Метка времени получения телеметрии.', verbose_name='Время события')),
                ('device', models.ForeignKey(help_text='Устройство, от которого получена телеметрия.', on_delete=django.db.models.deletion.CASCADE, related_name='telemetry', to='devices.device', verbose_name='Устройство')),
                ('tenant', models.ForeignKey(help_text='Тенант, к которому принадлежит запись.', on_delete=django.db.models.deletion.CASCADE, to='core.tenant', verbose_name='Тенант')),
            ],
            options={
                'verbose_name': 'Запись телеметрии',
                'verbose_name_plural': 'Записи телеметрии',
                'db_table': 'telemetry_telemetry',
                'indexes': [models.Index(fields=['tenant', 'device', 'key', 'ts'], name='telemetry_comp_idx'), models.Index(fields=['tenant', 'ts'], name='telemetry_tenant_ts_idx')],
            },
        ),
    ]
