# Generated by Django 5.2.7 on 2025-10-24 16:45

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='TenantUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(db_index=True, default=django.utils.timezone.now, help_text='Дата и время создания записи.', verbose_name='Создано')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Дата и время последнего изменения записи.', verbose_name='Обновлено')),
                ('is_active', models.BooleanField(default=True, help_text='Определяет, активно ли членство пользователя в тенанте.', verbose_name='Активное членство')),
                ('tenant', models.ForeignKey(help_text='Тенант, в котором состоит пользователь.', on_delete=django.db.models.deletion.CASCADE, related_name='memberships', to='core.tenant', verbose_name='Тенант')),
                ('user', models.ForeignKey(help_text='Пользователь, являющийся участником тенанта.', on_delete=django.db.models.deletion.CASCADE, related_name='tenant_memberships', to=settings.AUTH_USER_MODEL, verbose_name='Пользователь')),
            ],
            options={
                'verbose_name': 'Членство пользователя',
                'verbose_name_plural': 'Членства пользователей',
                'db_table': 'tenants_tenant_user',
                'unique_together': {('tenant', 'user')},
            },
        ),
    ]
